--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-mysql": "^3.1.0",
+    "egg-passport": "^2.1.1",
     "egg-scripts": "^2.11.0",
-    "egg-view-nunjucks": "^2.3.0"
+    "egg-validate": "^2.0.2",
+    "egg-view-nunjucks": "^2.3.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
